@startuml
'https://plantuml.com/class-diagram

class Game
class Player


Game *-- Player
Game *-- TextUI
Game *-- FileIO
Game *-- Board
Space "*" -up-* "1  " Board
Property -up-|> Space
Game *-- Dice



class Game {
- String name
- int maxPlayers
- List<Player>
- TextUI ui
- FileIO io
+ Game(String name, int maxPlayers)
- void createPlayer(String name, int score)
+ void registerPlayers()
+ void startSession()
+ void endSession()

}
class Player {
- String name
- int score
+ Player(String name, int score)
+ String toString()
}

class Board {
- ArrayList<Space> spaces
+ String toString()
}

abstract class Space {
- int id
- String name
- String type
+ String toString()
}

class Property {
- String color
- int price
+ String toString()
}

class Dice {
- int firstDie
- int secondDie
- boolean pair
+ int roll()
+ int pair()
}

class TextUI {
- Scanner scan
' shows a message and returns the user's input as a String
+ String promptText(String msg)
' shows a message and returns the user's input as an integer
+ int promptNumeric(String msg)
' shows the options, promts for choices until limit is reached, and returns the user's choices as a list
+ ArrayList<String> promptChoice(ArrayList<String> options, int limit, String msg)
' shows a message and lists the content of a list
+  void displayList(ArrayList<String> list, String msg)
' shows a message
+ void displayMsg(String msg)
}

class FileIO{
+ void saveData(ArrayList<String> data, String path, String header)
+ ArrayList<String> readData(String path)
}

@enduml
